--- a/web/app/styles/_constants.scss
+++ b/web/app/styles/_constants.scss
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400');
+@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400|Varela+Round');
 
 // Constant colors
-$WHITE: #FFFFFF;
+$WHITE: #FDFDFD;
 
 // Mid-dark gray, for text and UI elements
 $GRAY_1: #43485B;
@@ -25,3 +25,13 @@ $PURPLE_1: #717fdd;
 $ORANGE_1: #FF9867;
 
 $FONT_FAMILY: 'Source Sans Pro', sans-serif;
+$TEXT_FONT: 'Varela Round', sans-serif;
+
+
+// New colors
+$DARK_BLUE: #46677D;
+$BACKGROUND_COLOR: $DARK_BLUE;
+$PINK_1: #EB3986;
+$BLUE_2: #39A4EB;
+$PURPLE_2: #8E70D7;
+$GREEN_1: #70D7AB;
