--- a/web/app/styles/styles.scss
+++ b/web/app/styles/styles.scss
@@ -5,3 +5,5 @@
 @import 'components/footer';
 @import 'components/filterableTable';
 @import 'components/maps';
+@import 'components/forms';
+@import 'components/btn';
