--- a/web/app/styles/_constants.scss
+++ b/web/app/styles/_constants.scss
@@ -27,6 +27,7 @@ $ORANGE_1: #FF9867;
 $FONT_FAMILY: 'Source Sans Pro', sans-serif;
 $TEXT_FONT: 'Varela Round', sans-serif;
 
+$SHADOW_DEFAULT: rgba(0, 0, 0, .35);
 
 // New colors
 $DARK_BLUE: #46677D;
