--- a/web/app/styles/styles.scss
+++ b/web/app/styles/styles.scss
@@ -6,5 +6,7 @@
 @import 'components/filterableTable';
 @import 'components/maps';
 @import 'components/splash';
+@import 'components/card';
 @import 'components/forms';
 @import 'components/btn';
+@import 'components/sidebar';
