--- a/web/app/styles/components/_card.scss
+++ b/web/app/styles/components/_card.scss
@@ -1,6 +1,5 @@
 .gr-card {
 	&.card {
-		padding-top: 10px;
     border-radius: 0;
     box-shadow: 0 2px 20px $SHADOW_DEFAULT;
 	}
@@ -10,5 +9,10 @@
     &:focus {
       text-decoration: none;
     }
+  }
+  &--description {
+    color: $DARK_BLUE;
+    height: 50px;
+    overflow: hidden;
   }
 }
