--- a/web/app/styles/_base.scss
+++ b/web/app/styles/_base.scss
@@ -113,6 +113,12 @@ input[type="text"] {
   }
 }
 
+.navbar-fixed {
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+
 .gr-input {
   border-radius: 0;
   box-shadow: 0px 2px 20px $SHADOW_DEFAULT;
