--- a/web/app/styles/_constants.scss
+++ b/web/app/styles/_constants.scss
@@ -31,6 +31,8 @@ $SHADOW_DEFAULT: rgba(0, 0, 0, .35);
 
 // New colors
 $DARK_BLUE: #46677D;
+$DARKER_BLUE: #121B21;
+$BACKGROUND_GRADIENT: linear-gradient($DARK_BLUE, $DARKER_BLUE);
 $BACKGROUND_COLOR: $DARK_BLUE;
 $PINK_1: #EB3986;
 $BLUE_2: #39A4EB;
