--- a/web/app/styles/components/_reactGooglePlacesSuggest.scss
+++ b/web/app/styles/components/_reactGooglePlacesSuggest.scss
@@ -12,7 +12,7 @@
   list-style: none;
   margin: 0;
   padding: 0;
-  box-shadow: 0 .4rem .5rem .0625rem #dbdbdc;
+  box-shadow: 0 2px 20px $SHADOW_DEFAULT;
   z-index: 2;
 }
 
